--- a/usuarios_app/templates/create.html
+++ b/usuarios_app/templates/create.html
@@ -15,6 +15,7 @@
     <main>
         <div>
             <h1>Add a New User</h1>
+            <a href="/read">Home</a>
         </div>
         <form action='/' method="POST">
             <div class="input-box">
