--- a/usuarios_app/templates/read.html
+++ b/usuarios_app/templates/read.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+    <!-- Fuente Balsamiq -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -19,7 +24,8 @@
                         <td>Full Name</td>
                         <td>Email</td>
                         <td>Created At:</td>
-                    </tr>                    
+                        <td>Actions</td>
+                    </tr>
                 </thead>
                 <tbody>
                     {% for usuario in listaUsuarios : %}
@@ -28,8 +34,9 @@
                         <td>{{usuario.first_name}} {{usuario.last_name}}</td>
                         <td>{{usuario.email}}</td>
                         <td>{{usuario.created_at}}</td>
+                        <td class = "actions"><a href="">Show</a>|<a href="">Edit</a>|<form method ="POST" action="/users/remove/{{usuario.id}}"><button>Delete</button></form></td>
                     </tr>
-                    {% endfor %}                    
+                    {% endfor %}
                 </tbody>
 
             </table>
