--- a/usuarios_app/static/css/styles.css
+++ b/usuarios_app/static/css/styles.css
@@ -24,4 +24,11 @@ thead {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    width: fit-content;
+}
+/* read_users.html */
+.box {
+    border: 1px black solid;
+    padding: 5px;
+    width: fit-content;
 }
